# vault-bot

./: .gitignore  README.md  advanced_stats.Rmd  cloudsync.bat  config.py  db.py  docker-compose.yml  highscores.rmd  historical_tracking.py  interactive_table.R  interactive_table.Rmd  io_functions.py  main.py  project_logging.py  render_rmd.R  requirements.txt  spotify_commands.py  sql-backup-RENAME.bat  sql-backup.bat  sqlbackup.bat  stats.json  stats_commands.py  stats_graphics.R  vb_utils.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
backend/: .dockerignore  .prettierrc.json  Dockerfile  build.bat  nodemon.json  package-lock.json  package.json  server.js  server.ts  tsconfig.json
backend/changeLogPosts/: 2021-07-25.md
backend/db/: db.js  db.ts
backend/schema/: Resolvers.js  Resolvers.ts  TypeDefs.js
backend/src/: server.ts
discord/: .dockerignore  .pylintrc  Dockerfile  README.md  build.bat  cloudbuild.yaml  historical_tracking.py  main.py  pyproject.toml  requirements.txt  vaultbot-kubernetes.yaml
discord/kubernetes/: deployment.yaml
discord/src/: config.py  database_connection.py  db.py  db_migration.py  discord_responses.py  historical_tracking.py  historical_tracking_fix.py  io_functions.py  spotify_commands.py  spotify_selects.py  vb_utils.py  webhook_updates.py
discord/src/db/: create_schema.py  migrate_database.py  update_database.py
discord/src/db/migrations/: albums_songs_rework.py  archive_serial_pkey_fix.py  artist_song_link_table.py  artists_genres_featured_tracking.py  duplcate_song_fix.py  energy_aggregate_playlist.py  genre_table_rework.py  rankings_views.py  selects_refactor.py
discord/src/db/migrations/one-time-migrations/: albums_songs_seeding.py  artists_songs.py  duplicate_song_lookup_seeding.py  icon_sized_art_remediation.py
frontend/: .prettierignore  .prettierrc.json  Dockerfile  build.bat  package-lock.json  package.json
frontend/nginx/: nginx.conf
frontend/public/: index.html  manifest.json
frontend/src/: index.css  index.js  (+1 more)
functions/: go.mod  go.sum
functions/python/song_update/: cloudbuild.yaml  main.py  pyproject.toml
network_visualization/: __init__.py  arts_download.py  network_analysis.py  network_coordinator.py  network_db.py
(+237 files in other folders)
