[tool.poetry]
name = "vaultbot-discord"
version = "2.1.0"
description = "Discord bot for VaultBot"
authors = ["tbrittain <treybrittain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alive-progress = "^2.4.1"
discord = "^2.0.0"
spotipy = "^2.20.0"
pandas = "^1.4.3"
psycopg2 = "^2.9.3"
google-cloud-logging = "^3.2.2"
google-cloud-secret-manager = "^2.12.3"
discord-webhook = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
