[tool.poetry]
name = "vaultbot-discord"
version = "2.1.0"
description = "Discord bot for VaultBot"
authors = ["tbrittain <treybrittain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alive-progress = "^3.0.0"
discord = "^2.1.0"
spotipy = "^2.22.0"
pandas = "^1.5.2"
psycopg2 = "^2.9.5"
google-cloud-secret-manager = "^2.13.0"
discord-webhook = "^1.0.0"
thefuzz = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
