[tool.poetry]
name = "song_update"
version = "0.1.0"
description = "Google Cloud Function listening on a pub/sub topic for song update messages"
authors = ["tbrittain <treybrittain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
functions-framework = "^3.2.0"
google-cloud-logging = "^3.2.2"
google-cloud-secret-manager = "^2.12.4"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
